# oop-animal

./: .gitignore
c/: .gitignore  configure.ac
c/src/amphibia/: prog.c
c/src/base/: base_object.c
c/src/mammal/: cat.c  dog.h
c/test/: animal_action.c
cpp/: .gitignore  autogen.sh  configure.ac
cpp/src/amphibia/: Makefile.am  prog.cpp  prog.h
cpp/src/base/: Makefile.am  base_amphibia.cpp  base_amphibia.h  base_mammal.cpp  base_mammal.h  base_object.cpp  base_object.h
cpp/src/mammal/: Makefile.am  cat.cpp  cat.h  dog.cpp  dog.h
cpp/test/: Makefile.am  animal_action.cpp
src/amphibia/: prog.h
src/base/: base_amphibia.c  base_amphibia.h  base_mammal.c  base_mammal.h  base_object.h
src/mammal/: cat.h  dog.c  dog.h
template_oop-animal/: .gitignore  configure.ac
template_oop-animal/src/: Makefile.am
template_oop-animal/src/amphibia/: Makefile.am
template_oop-animal/src/base/: Makefile.am  base_amphibia.c  base_amphibia.h  base_object.c  base_object.h
template_oop-animal/src/mammal/: Makefile.am  cat.c  dog.c  dog.h
template_oop-animal/test/: Makefile.am
test/: Makefile.am  animal_action  animal_action.c
